end Destination part

--- a/index.html
+++ b/index.html
@@ -108,6 +108,43 @@
 
  <!-- /////////////////////////////////////////////        -->
 
+        <div class="choose-container">
+
+
+            <h1 class="choose-title">Choose Your Destination</h1>
+            <p class="choose-dis">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque</p>
+
+            <div class="st-row">
+                <h2 class="mal">Maldives</h2>
+                <img src="./Images/Rectangle 5.png" alt="">
+
+                <h2 class="indo">Indonesia</h2>
+                <img src="./Images/Rectangle 8.png" alt="">
+            </div>
+
+            <div class="nd-row">
+                <h2 class="sri">Srilanka</h2>
+                <img src="./Images/Rectangle 6.png" alt="">
+                <h2 class="north">North America</h2>
+                <img src="./Images/Rectangle 7.png" alt="">
+                <h2 class="kash">Kashmir</h2>
+                <img src="./Images/Rectangle 9.png" alt="">
+            </div>
+
+            <div class="rd-row">
+                <h2 class="bang">Bangladesh</h2>
+                <img src="./Images/Rectangle 11.png" alt="">
+                <h2 class="bandor">Bandarban</h2>
+                <img src="./Images/Rectangle 10.png" alt="">
+            </div>
+
+
+
+
+
+
+        </div>
+
     </main>
 
 
