--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
 
 
           <div class="price-dis">
-            <h2 class="pl-name">Banff National Park, Canada:</h2>
+            <h2 class="pl-name">Banff National Park:</h2>
             <p class="tp">
               "Experience nature's grandeur in Banff. Majestic mountains, turquoise lakes, and abundant wildlife create
               an outdoor enthusiast's paradise in the heart of the Rockies."
