--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
 
 
       <div class="nav-menu-container">
-        <ul>
-          <div class="res">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-              <path d="M3.75 6.75H20.25M3.75 12H20.25M3.75 17.25H20.25" stroke="#131318" stroke-width="1.5"
-                stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </div>
+        <ul>         
           <li><a class="nav-home" href="">Home</a></li>
           <li><a href="">Packages</a></li>
           <li><a href="">Testimonial</a></li>
           <li><a href="">Blog</a></li>
           <li><a href="">Contact</a></li>
+          
         </ul>
+
+        <svg class="i" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+          <path d="M3.75 6.75H20.25M3.75 12H20.25M3.75 17.25H20.25" stroke="#131318" stroke-width="1.5"
+            stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+        
       </div>
 
     </div>
