photo collage update

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter&family=Manrope:wght@300&family=Mulish:ital,wght@0,300;0,600;0,800;1,400&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter&family=Manrope:wght@300&family=Mulish:wght@200;300;400;500;600;700;800;900;1000&display=swap"
     rel="stylesheet">
 
 <body>
@@ -28,20 +30,20 @@
 
 
       <div class="nav-menu-container">
-        <ul>         
+        <ul>
           <li><a class="nav-home" href="">Home</a></li>
           <li><a href="">Packages</a></li>
           <li><a href="">Testimonial</a></li>
           <li><a href="">Blog</a></li>
           <li><a href="">Contact</a></li>
-          
+
         </ul>
 
         <svg class="i" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
           <path d="M3.75 6.75H20.25M3.75 12H20.25M3.75 17.25H20.25" stroke="#131318" stroke-width="1.5"
             stroke-linecap="round" stroke-linejoin="round" />
         </svg>
-        
+
       </div>
 
     </div>
@@ -63,9 +65,20 @@
       </div>
 
       <div class="header-input">
+
         <input type="text" name="" id="" placeholder="Where go">
-        <input type="text" name="" id="" placeholder="When">
-        <input type="text" name="" id="" placeholder="Select Type">
+
+                <select class="inp1" name="" id="">
+                    <option value="tea">When</option>
+                </select>
+                <select class="inp2" name="" id="">
+                    <option value="tea">Select Type</option>
+                </select>
+        <!-- <input type="text" name="" id="" placeholder="Where go">
+        <input type="text" name="" id="" placeholder="When"> -->
+        <!-- <input type="text" name="" id="" placeholder="Select Type"> -->
+
+
         <button class="find-btn"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
             fill="none">
             <path
@@ -129,29 +142,59 @@
         "Select your ideal destination and embark on a personalized journey. Choose Your Destination and create
         unforgettable travel experiences tailored to your preferences."</p>
 
-      <div class="st-row">
-        <h2 class="mal">Maldives</h2>
-        <img src="./Images/Rectangle 5.png" alt="">
 
-        <h2 class="indo">Indonesia</h2>
-        <img src="./Images/Rectangle 8.png" alt="">
-      </div>
+        <div class="photo-collage">
 
-      <div class="nd-row">
-        <h2 class="sri">Srilanka</h2>
-        <img src="./Images/Rectangle 6.png" alt="">
-        <h2 class="north">North America</h2>
-        <img src="./Images/Rectangle 7.png" alt="">
-        <h2 class="kash">Kashmir</h2>
-        <img src="./Images/Rectangle 9.png" alt="">
-      </div>
+          <div class="item item1">
+            <img src="./Images/Rectangle 5.png" alt="">
+            <div class="text">
+              <p>Maldives</p>
+            </div>
+          </div>
 
-      <div class="rd-row">
-        <h2 class="bang">Bangladesh</h2>
-        <img src="./Images/Rectangle 11.png" alt="">
-        <h2 class="bandor">Bandarban</h2>
-        <img src="./Images/Rectangle 10.png" alt="">
-      </div>
+          <div class="item item2">
+            <img src="./Images/Rectangle 8.png" alt="">
+            <div class="text">
+              <p>Indonesia</p>
+            </div>
+          </div>
+
+          <div class="item item3">
+            <img src="./Images/Rectangle 6.png" alt="">
+            <div class="text">
+              <p>Srilanka</p>
+            </div>
+          </div>
+
+          <div class="item item4">
+            <img src="./Images/Rectangle 7.png" alt="">
+            <div class="text">
+              <p>North America</p>
+            </div>
+          </div>
+
+          <div class="item item5">
+            <img src="./Images/Rectangle 9.png" alt="">
+            <div class="text">
+              <p>Kashmir</p>
+            </div>
+          </div>
+
+          <div class="item item6">
+            <img src="./Images/Rectangle 11.png" alt="">
+            <div class="text">
+              <p>Bangladesh</p>
+            </div>
+          </div>
+
+          <div class="item item7">
+            <img src="./Images/Rectangle 10.png" alt="">
+            <div class="text">
+              <p>Bandarban</p>
+            </div>
+          </div>
+
+        </div>  
 
     </div>
 
@@ -1111,9 +1154,11 @@
         </p>
 
         <ul>
-          <li>"A simple, perfect place to get lost in the beauty of untouched landscapes. Find solace in nature's embrace."
+          <li>"A simple, perfect place to get lost in the beauty of untouched landscapes. Find solace in nature's
+            embrace."
           </li>
-          <li>"Discover a simple, perfect place to get lost—an idyllic, cozy haven where tranquility and charm merge seamlessly."
+          <li>"Discover a simple, perfect place to get lost—an idyllic, cozy haven where tranquility and charm merge
+            seamlessly."
           </li>
         </ul>
 
@@ -1185,7 +1230,8 @@
       </div>
 
       <div class="foot-dis">
-        <p>"Hero Travel: Elevate Your Journey. Unleash adventures, discover new horizons, and create heroic memories with our exceptional travel experiences." </p>
+        <p>"Hero Travel: Elevate Your Journey. Unleash adventures, discover new horizons, and create heroic memories
+          with our exceptional travel experiences." </p>
       </div>
 
       <div class="foot-icon">
@@ -1217,6 +1263,8 @@
     </div>
 
   </footer>
+
+
 
   <!-- ///////////////////////////////////////////// -->
 
